--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ contact information on where the form should be sent. `<br>
         const defaultResponse = `
             Lo siento, no entiendo esa pregunta. Puedes preguntarme sobre:
             <ul>
-                <li>Cursos disponibles</li>
+                <li>transcripts</li>
                 <li>Horarios de atención</li>
                 <li>Información de contacto</li>
                 <li>Precios</li>
