--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <script>
         const responses = {
-            "cursos": `
+            "transcripts": `
                 <h3>Transcripts:</h3>
                 <ul>
                     <li>https://www.parchment.com/</li>
