--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatBot Informativo</title>
+    <title>Queue ChatBot </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,10 +99,10 @@
     <div class="chat-container">
         <div class="chat-box" id="chatBox">
             <div class="message bot-message">
-                ¡Hola! Soy tu asistente virtual. Puedes preguntarme sobre:
+                !Hi, I'm your virtual Assistant:
                 <ul>
-                    <li>Cursos disponibles</li>
-                    <li>Horarios de atención</li>
+                    <li>Transcripts</li>
+                    <li>Referal</li>
                     <li>Información de contacto</li>
                     <li>Precios</li>
                     <li>Ubicación</li>
@@ -117,7 +117,7 @@
 
     <script>
         const responses = {
-            "cursos": `
+            "transcripts": `
                 <h3>Cursos Disponibles:</h3>
                 <ul>
                     <li>Desarrollo Web Frontend</li>
@@ -128,7 +128,7 @@
                 <p>Para más información, visita nuestra página de cursos: 
                 <a href="https://ejemplo.com/cursos" target="_blank">Ver todos los cursos</a></p>
             `,
-            "horarios": `
+            "referal": `
                 <h3>Horarios de Atención:</h3>
                 <p>Lunes a Viernes: 9:00 AM - 6:00 PM<br>
                 Sábados: 9:00 AM - 1:00 PM<br>
