--- a/index.html
+++ b/index.html
@@ -118,21 +118,19 @@
     <script>
         const responses = {
             "transcripts": `
-                <h3>Cursos Disponibles:</h3>
+                <h3>Transcripts:</h3>
                 <ul>
-                    <li>Desarrollo Web Frontend</li>
-                    <li>Desarrollo Web Backend</li>
-                    <li>Python para principiantes</li>
-                    <li>JavaScript Avanzado</li>
+                    <a href="https://www.parchment.com" target="_blank">www.parchment.com</a></p>
+                   
                 </ul>
-                <p>Para más información, visita nuestra página de cursos: 
+                <p>
                 <a href="https://ejemplo.com/cursos" target="_blank">Ver todos los cursos</a></p>
             `,
             "referal": `
-                <h3>Horarios de Atención:</h3>
-                <p>Lunes a Viernes: 9:00 AM - 6:00 PM<br>
-                Sábados: 9:00 AM - 1:00 PM<br>
-                Domingos: Cerrado</p>
+                <h3>Referal link:</h3>
+                <p>
+                <a href="https://kellyeducation.referralrock.com/v2/1/register" target="_blank">https://kellyeducation.referralrock.com/v2/1/register</a></p>
+               
             `,
             "contacto": `
                 <h3>Información de Contacto:</h3>
