--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                 <ul>
                     <li>Transcripts</li>
                     <li>Referal</li>
-                    <li>Información de contacto</li>
+                    <li>Employment verification</li>
                     <li>Precios</li>
                     <li>Ubicación</li>
                 </ul>
             </div>
         </div>
         <div class="input-area">
-            <input type="text" id="userInput" placeholder="Escribe tu mensaje...">
+            <input type="text" id="userInput" placeholder="Type...">
             <button onclick="sendMessage()">Enviar</button>
         </div>
     </div>
@@ -131,12 +131,50 @@
                 <p>
                 <a href="https://kellyeducation.referralrock.com/v2/1/register" target="_blank">https://kellyeducation.referralrock.com/v2/1/register</a></p>
                
-            `,
-            "contacto": `
-                <h3>Información de Contacto:</h3>
-                <p>📧 Email: info@ejemplo.com<br>
-                📞 Teléfono: (123) 456-7890<br>
-                💬 WhatsApp: <a href="https://wa.me/1234567890" target="_blank">Enviar mensaje</a></p>
+            "employment verification": `
+    <h3>Employment Verification Process</h3>
+
+    <div style="margin-bottom: 20px;">
+        <p>For employment verification, we utilize <strong>Experian Verify</strong>. Employees can register an account and access their information for free.</p>
+    </div>
+
+    <div class="verification-steps" style="background: #f5f5f5; padding: 15px; border-radius: 8px; margin-bottom: 20px;">
+        <h4>Key Information:</h4>
+        <ul>
+            <li>Available 24/7 with instant access</li>
+            <li>Free unlimited reports for employees</li>
+            <li>Provides both employment and income verifications</li>
+        </ul>
+    </div>
+
+    <div class="registration-process" style="margin-bottom: 20px;">
+        <h4>Registration Process:</h4>
+        <ol>
+            <li>Visit <a href="http://www.experianverify.com" target="_blank">www.experianverify.com</a></li>
+            <li>Sign up for a new account</li>
+            <li>Enter employer access code: <strong>419B5F0D</strong></li>
+        </ol>
+    </div>
+
+    <div class="contact-info" style="background: #e8f4f8; padding: 15px; border-radius: 8px; margin-bottom: 20px;">
+        <h4>Contact Information:</h4>
+        <p>
+            📞 Customer Service: <strong>404.382.5400</strong><br>
+            📧 Support Email: <a href="mailto:verify.support@experian.com">verify.support@experian.com</a>
+        </p>
+    </div>
+
+    <div class="form-verification" style="background: #fff3e0; padding: 15px; border-radius: 8px;">
+        <h4>Form Verification Process:</h4>
+        <p>For forms that need to be filled out for verification purposes:</p>
+        <ul>
+            <li>Send forms to: <a href="mailto:payaudit@kellyservices.com">payaudit@kellyservices.com</a></li>
+            <li>Forms will be sent directly to the requesting agency</li>
+            <li>Please ensure correct contact information is included on the form</li>
+        </ul>
+        <p><em>Note: No specific timeframe can be provided for form completion.</em></p>
+    </div>
+`,
             `,
             "precios": `
                 <h3>Precios de Cursos:</h3>
