--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li>Transcripts</li>
                     <li>Referal</li>
                     <li>Employment verification</li>
-                    <li>Precios</li>
+                    <li>Wifi password</li>
                     <li>Ubicación</li>
                 </ul>
             </div>
@@ -176,14 +176,13 @@
     </div>
 `,
             `,
-            "precios": `
-                <h3>Precios de Cursos:</h3>
+            "wifi password": `
+                <h3>Wifi Password:</h3>
                 <ul>
-                    <li>Curso Básico: $299</li>
-                    <li>Curso Intermedio: $499</li>
-                    <li>Curso Avanzado: $699</li>
+                    <li>KeLLY207W!</li>
+                   
                 </ul>
-                <p><strong>Nota:</strong> Todos los cursos incluyen certificado.</p>
+                <p><strong>Note:</strong> You can't give the password to the talents.</p>
             `,
             "ubicacion": `
                 <h3>Nuestra Ubicación:</h3>
